--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,6 +1,27 @@
-.homepage{
-    background-image: url("../assets/Homepage-bg-cover.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
+.homepage {
+  height: 100vh;
+}
+
+.card-section {
+  display: flex;
+  gap: 2rem;
+  margin: 2rem;
+  justify-content: center;
+}
+
+.card {
+  min-height: 40vh;
+  width: 30%;
+  outline: 1px solid;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+.card__doctor {
+  background-image: url("https://cdn-icons-png.flaticon.com/512/3774/3774299.png");
+}
+
+.card__patient {
+  background-image: url("https://cdn-icons-png.flaticon.com/512/1430/1430453.png");
 }
