--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -21,7 +21,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  background-color: #F3F4F6;
+  background-color: #f3f4f6;
 }
 
 .card__doctor {
