--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -9,7 +9,11 @@ html {
 
 body {
   height: 100vh;
-  background-color: #F3F4F6;
+  background-color: #f3f4f6;
+}
+
+#root {
+  height: 100vh;
 }
 
 *,
